# animerecommender

./: .gitignore  CMakeLists.txt  Database.cpp  Database.h  JikanClient.cpp  JikanClient.h  Recommender.cpp  Recommender.h  Server.cpp  Server.h  main.cpp
